--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
         <img src="./img/image-qr-code.png" alt="QRcode" width="258px" height="258px">
         <h1>Improve yout front-end skills by building projects</h1>
-        <p>Scan the QR code to visit Frontend Mentor ans take yout coding skills to the next level</p>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
     </div>
 </body>
